# powerlifting-manager

./: .gitignore  ACCESSIBILITY_AUDIT_REPORT.md  ACCESSIBILITY_IMPROVEMENTS.md  ACCESSIBILITY_TESTING.md  CHANGELOG.md  DEMO.md  README.md  REFACTORING_SUMMARY.md  SETUP_GUIDE.md  TODO.md  cliff.toml  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
e2e/: competition-flow.spec.ts
scripts/: dev.bat  run-dev.bat  setup-linux.sh  setup-windows.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_flights.sql  003_add_divisions_and_categories.sql  004_add_records.sql  005_add_multi_platform.sql  006_add_media_and_history.sql  007_add_out_of_competition.sql
src-tauri/src/: main.rs  websocket.rs
src-tauri/src/commands/: athlete.rs  attempt.rs  competition.rs  equipment.rs  flight.rs  mod.rs  protest.rs  weigh_in.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/migrations/: 001_initial_schema.sql  002_protests.sql  003_equipment_validation.sql
src/components/: Dashboard.tsx  DemoDataInitializer.tsx  KeyboardShortcutsHelp.tsx  LanguageSwitcher.tsx  Layout.tsx  UpdateChecker.tsx
src/features/athlete/: types.ts
src/features/competition/: types.ts
src/features/competition-flow/: types.ts
src/features/weigh-in/: types.ts
src/i18n/: config.ts
src/i18n/locales/: en.json  fr.json
src/shared/constants/: index.ts  ipfEquipment.ts
src/shared/hooks/: useConfirmAction.tsx  (+5 more)
src/theme/: ThemeContext.tsx  index.ts  useTheme.ts  useThemeColors.ts
(+84 files in other folders)
