[package]
name = "powerlifting-manager"
version = "0.1.0"
description = "Application de gestion de compétitions de powerlifting"
authors = ["mateobrl"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["devtools"] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
